fix: currency icon , price font size and spacing

--- a/store/src/components/cart/CartItem.module.css
+++ b/store/src/components/cart/CartItem.module.css
@@ -117,3 +117,6 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.currencySign {
+  margin-right: 5px;
+}
