--- a/store/src/components/product-view/ProductView.module.css
+++ b/store/src/components/product-view/ProductView.module.css
@@ -19,5 +19,11 @@
   border: 1px solid #8494a3;
   margin-bottom: 10px;
 }
-
+.priceStyled {
+  font-size: 1.7rem;
+  margin-right: 4px;
+}
+.currencySign {
+  margin-right: 7px;
+}
 /******* Product custom css end *******/
